fixed weird spacing under image on intro page

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -77,6 +77,7 @@ p{
 #cslintro {
 	background-color:$tan;
 	color:$black;
+	margin-top:-5px;
 }
 #explore {
 	color:$white;
